# 0603

./: .env.example  .gitignore  CHANGELOG.md  README.md  SUBMISSION.md  pyproject.toml
config/: settings.yaml
docs/: architecture.md  modeling.md  qlib_integration.md  research_basis.md
scripts/: check_project.ps1  start_api.ps1  start_web.ps1
src/agent_trading/: __init__.py  cli.py  schemas.py  settings.py
src/agent_trading/agents/: opportunity.py  sentiment.py  workflow.py
src/agent_trading/api/: main.py
src/agent_trading/backtesting/: simple.py
src/agent_trading/data/: __init__.py  network.py  providers.py  symbols.py
src/agent_trading/features/: technical.py
src/agent_trading/models/: __init__.py  analog.py  deep_learning.py  fear.py  forecast.py  ml.py  signal_engine.py
src/agent_trading/pipelines/: demo_training.py
src/agent_trading/qlib_integration/: __init__.py  service.py
src/agent_trading/training/: __init__.py  dataset.py  labels.py  train_baseline.py
tests/: test_analog.py  test_deep_learning.py  test_forecast.py  test_ml.py  test_opportunity.py  test_qlib_service.py  test_symbols.py  test_training_dataset.py
web/: index.html
