[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-trading"
version = "0.1.0"
description = "Agentic quant research scaffold for China A-share forecasting and strategy analysis."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.111",
  "uvicorn[standard]>=0.30",
  "pydantic>=2.7",
  "pydantic-settings>=2.3",
  "pandas>=2.2",
  "numpy>=1.26",
  "scikit-learn>=1.5",
  "pyyaml>=6.0",
]

[project.optional-dependencies]
data = [
  "akshare>=1.14",
  "tushare>=1.4",
]
ml = [
  "shap>=0.46",
]
deep = [
  "torch>=2.2",
]
qlib = [
  "pyqlib>=0.9",
]
agent = [
  "langgraph>=0.2",
  "langchain>=0.2",
]
dev = [
  "pytest>=8.2",
  "ruff>=0.5",
  "mypy>=1.10",
  "httpx>=0.27",
]

[project.scripts]
agent-trading = "agent_trading.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.pytest.ini_options]
testpaths = ["tests"]
